# Development-Board-Application

./: .coverage.base  .coverage.run  .coverage.total  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  bluetoothcomm_8cpp_source.html  bluetoothcomm_8h_source.html  bluetoothmessagecrafter_8cpp_source.html  bluetoothmessagecrafter_8h_source.html  bluetoothmessagefield_8cpp_source.html  bluetoothmessagefield_8h_source.html  bluetoothmessagehandler_8cpp_source.html  bluetoothmessagehandler_8h_source.html  bluetoothmessagetype_8cpp_source.html  bluetoothmessagetype_8h_source.html  button_8cpp_source.html  button_8h_source.html  buttonpoll_8cpp_source.html  buttonpoll_8h_source.html  class_bluetooth_1_1_bluetooth_message_crafter-members.html  class_bluetooth_1_1_bluetooth_message_crafter.html  class_bluetooth_1_1_bluetooth_message_handler-members.html  class_bluetooth_1_1_bluetooth_message_handler.html  class_bluetooth_1_1_bluetooth_message_handler.js  class_bluetooth_1_1_in_message_field-members.html  class_bluetooth_1_1_in_message_field.html  class_bluetooth_1_1_in_message_field.js  class_bluetooth_1_1_message_type-members.html  class_bluetooth_1_1_message_type.html  class_bluetooth_1_1_out_message_field-members.html  class_bluetooth_1_1_out_message_field.html  class_bluetooth_1_1_out_message_field.js  class_bluetooth_comm-members.html  class_bluetooth_comm.html  (+79 more)
docs/: index.html
doxygen/html/: annotated.html  annotated_dup.js  bluetoothcomm_8cpp_source.html  bluetoothcomm_8h_source.html  (+143 more)
files/: config.txt  gps.py  musicplayer.service  wifiinfo.txt
include/: CMakeLists.txt  bluetoothcomm.h  bluetoothmessagecrafter.h  bluetoothmessagefield.h  bluetoothmessagehandler.h  bluetoothmessagetype.h  bluetoothserver.h  button.h  buttonpoll.h  config.h  espp_bt_client.h  espp_bt_server.h  httpsclient.h  main.h  musicplayer.h  process.h  servercomm.h  servercommthread.h  sftpclient.h  songinfoparser.h  vamk_aes.h  vamk_random.h  vamk_rfcomm.h  vamk_rsa.h  vamk_sdp.h  vamk_socket.h  wificonnect.h  wifihandler.h  wifiscanner.h
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  enums_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  search.css  searchdata.js
src/: CMakeLists.txt  bluetoothcomm.cpp  bluetoothmessagecrafter.cpp  bluetoothmessagefield.cpp  bluetoothmessagehandler.cpp  bluetoothmessagetype.cpp  button.cpp  buttonpoll.cpp  config.cpp  espp_bt_client.cpp  espp_bt_server.cpp  httpsclient.cpp  main.cpp  musicplayer.cpp  process.cpp  servercomm.cpp  servercommthread.cpp  sftpclient.cpp  songinfoparser.cpp  vamk_aes.cpp  vamk_random.cpp  vamk_rfcomm.cpp  vamk_rsa.cpp  vamk_sdp.cpp  vamk_socket.cpp  wificonnect.cpp  wifihandler.cpp  wifiscanner.cpp
test/: gtest_main.cpp  sample_test_file_1.cpp  sample_test_file_2.cpp
(+40 files in other folders)
